--- a/posts/templates/posts/post_detalhes.html
+++ b/posts/templates/posts/post_detalhes.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load humanize %}
 
+{% block titulo %}Detalhes |{% endblock %}
+
 {% block conteudo %}
 <!-- CONTENT -->
 <div class="card-columns mt-4">
