--- a/posts/templates/posts/post_detalhes.html
+++ b/posts/templates/posts/post_detalhes.html
@@ -1,49 +1,76 @@
 {% extends 'base.html' %}
-{% load humanize %}
-
-{% block titulo %}Detalhes |{% endblock %}
 
 {% block conteudo %}
-<!-- CONTENT -->
-<div class="card-columns mt-4">
-
-
-    {% for post in posts %}
-    <div class="card">
-
-        {% if post.imagem_post %}
-        <a href="{% url 'post_detalhes' post.id %}">
-            <img class="card-img-top"
-                 src="{{ post.imagem_post.url }}"
-                 alt="{{ post.titulo_post }}">
-        </a>
-        {% endif %}
-
-        <div class="card-body">
-            <h5 class="card-title">
-                <a href="{% url 'post_detalhes' post.id %}">
-                    {{ post.titulo_post }}
-                </a>
-            </h5>
-            <p class="card-text">{{ post.excerto_post }}</p>
-            <p class="card-text">
-                <small class="text-muted">
-                    {{ post.data_post|naturalday|title }}
-                    |
-                    {{ post.numero_comentario }} Comentario(s)
-                    |
-                    {{ post.categoria_post }}</small>
+<!-- POST -->
+<div class="container">
+    <div class="row pt-5">
+        <div class="col-xl"></div>
+        <div class="col-xl-8 text-center">
+            <h2>{{ post.titulo_post }}</h2>
+            <h5>{{ post.excerto_post }}</h5>
+            <p class="text-muted mt-4">
+                <small>
+                    {{ post.autor_post }} | {{ post.data_post }} | {{ post.categoria_post }}
+                </small>
             </p>
-
-            <div class="text-right">
-                <a href="{% url 'post_detalhes' post.id %}" class="btn btn-outline-secondary">Ler mais...</a>
-            </div>
         </div>
+        <div class="col-xl"></div>
     </div>
-    {% endfor %}
+
+    <div class="row pt-5">
+        <div class="col-xl"></div>
+        <div class="col-xl-8">
+
+            {% if post.imagem_post %}
+            <img class="img-fluid pb-5 " src="{{ post.imagem_post.url }}" alt="{{ post.titulo_post }}">
+            {% endif %}
+
+            <!-- Coteudo do Post -->
+            {{ post.conteudo_post|safe }}
+
+        </div>
+        <div class="col-xl"></div>
+    </div>
 
 
+    <div class="row pt-5">
+        <div class="col-xl"></div>
+        <div class="col-xl-8">
+            <h2 class="my-3">Comentarios ({{ post.numero_comentario }})</h2>
+
+            <h5 class="mb-2 mt-5">{{ post.autor_post }} disse:</h5>
+            <small class="text-muted">{{ post.data_post }}</small>
+            <p class="mb-1">{{ post.comentario }}</p>
+
+        </div>
+        <div class="col-xl"></div>
+    </div>
+
+
+
+    <div class="row pt-5">
+        <div class="col-xl"></div>
+        <div class="col-xl-8">
+            <h2 class="my-3">Deixe um comentario</h2>
+
+            <form method="POST" action="#envia_comentario">
+                {% csrf_token %}
+                <table class="table">
+                    {{ form }}
+                    <tr>
+                        <td colspan="2">
+                            {% include 'parciais/_messages.html' %}
+                            <input id="envia_comentario" type="submit" class="btn btn-primary"
+                                value="Enviar">
+                        </td>
+                    </tr>
+                </table>
+            </form>
+
+
+        </div>
+        <div class="col-xl"></div>
+    </div>
 </div>
-<!--/CONTENT-->
-{% include 'parciais/_pagination.html' %}
+<!-- POST -->
 {% endblock %}
