--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 
 <head>
-    <title>{% block titulo %}Inicio |{% endblock %} Blog do Augusto Silva</title>
+    <title>{% block titulo %}{% endblock %}Blog do Augusto Silva</title>
     {% include 'parciais/_head.html' %}
 </head>
 
