--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-
+<a href="#" class="scrollToTop">Topo</a>
 {% include 'parciais/_nav.html' %}
 <!-- Page Content -->
 <div class="container">
