--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load humanize %}
+{% load om_filters %}
 
 {% block conteudo %}
 <!-- CONTENT -->
@@ -28,7 +29,7 @@
                 <small class="text-muted">
                     {{ post.data_post|naturalday|title }}
                     |
-                    {{ post.numero_comentario }} Comentario(s)
+                    {{ post.numero_comentario|pural_comentarios }}
                     |
                     {{ post.categoria_post }}</small>
             </p>
