--- a/posts/templates/posts/post_detalhes.html
+++ b/posts/templates/posts/post_detalhes.html
@@ -70,7 +70,8 @@
                 {{ visible_field|as_crispy_field }}
 
             {% endfor %}
-
+            <div class="g-recaptcha" data-sitekey="6LdfWmAaAAAAACv15cg5kvJbvoe5D4Ths84T0U6u"></div>
+            <br/>
             {% include 'parciais/_messages.html' %}
             <input id="envia_comentario" type="submit" class="btn btn-primary" value="Enviar">
         </form>
